syntax = "proto3";
package sro.accounts;
option go_package = "pkg/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service AuthenticationService {
  rpc Register(RegisterAccountMessage) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/register"
      body: "*"
    };
  }

  rpc Login(LoginMessage) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  }
}

message LoginMessage {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message RegisterAccountMessage {
  string email = 1;
  string password = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
}
